add blog websocket

--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
 	<title>Belal M.K. Said</title>
 	<link rel="stylesheet" type="text/css" href="core.css" media="screen" />
@@ -6,77 +7,100 @@
 	<script src="disquemath.js"></script>
 	<script src="core.js"></script>
 	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+		(function (i, s, o, g, r, a, m) {
+		i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+			(i[r].q = i[r].q || []).push(arguments)		
+}, i[r].l = 1 * new Date(); a = s.createElement(o),
+			m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
 		ga('create', 'UA-98293275-1', 'auto');
 		ga('send', 'pageview');
 
 	</script>
 	<style>
-
 	</style>
 </head>
+
 <body>
 	<canvas id="background"></canvas>
 	<div id="navbar">
-		<a href="index.html">Home</a> / 
-		<a href="blog.html">Blog</a> / 
-		<a href="projects.html">Projects</a> / 
+		<a href="index.html">Home</a> /
+		<a href="blog.html">Blog</a> /
+		<a href="projects.html">Projects</a> /
 		<a href="BelalSaidResumeCS.pdf" target="_blank">R&#233;sum&#233;</a>
-	</ul>
-</div>
-<div id="realbody">
-	<div id="posters">
-		<div class="projectPoster">
-		<h1><a href="https://github.com/belalmksaid/comiccolorizer/" target="_blank">Colorizing Comics using Deep CNNs in TensorFlow</a>  <a href="https://github.com/belalmksaid/comiccolorizer/" target="_blank"><img class="srcicon" src="images/github.png"/></a></h1>
-		<br/>
-			<div class="projectdisplay">
-				<img src="https://github.com/belalmksaid/comiccolorizer/raw/master/summary/57000_iop.jpg?raw=true"/>
-				<img src="https://github.com/belalmksaid/comiccolorizer/raw/master/summary/199000_iop.jpg?raw=true"/>
+		</ul>
+	</div>
+	<div id="realbody">
+		<div id="posters">
+			<div class="projectPoster">
+				<h1>
+					<a href="https://github.com/belalmksaid/comiccolorizer/" target="_blank">Colorizing Comics using Deep CNNs in TensorFlow</a>
+					<a href="https://github.com/belalmksaid/comiccolorizer/" target="_blank">
+						<img class="srcicon" src="images/github.png" />
+					</a>
+				</h1>
+				<br/>
+				<div class="projectdisplay">
+					<img src="https://github.com/belalmksaid/comiccolorizer/raw/master/summary/57000_iop.jpg?raw=true" />
+					<img src="https://github.com/belalmksaid/comiccolorizer/raw/master/summary/199000_iop.jpg?raw=true" />
+				</div>
+				<br/>
+				<h3></h3>
 			</div>
-			<br/>
-			<h3></h3>
-		</div>
-		<div class="projectPoster">
-		<h1><a href="https://grabcad.com/library/music-box-in-a-piano-1" target="_blank">Music Box Animation and Render</a></h1>
-		<br/>
-			<div class="projectdisplay">
-				<iframe src="https://www.youtube.com/embed/-2dWcMpG0eE" frameborder="0" allowfullscreen></iframe>
-				<img src="https://d2t1xqejof9utc.cloudfront.net/screenshots/pics/95e15253cfd4ad57acf76901057a8dad/large.JPG"/>
-				<img src="https://d2t1xqejof9utc.cloudfront.net/screenshots/pics/952f4e56f32c58386a18349fd50b0548/large.JPG"/>
+			<div class="projectPoster">
+				<h1>
+					<a href="https://grabcad.com/library/music-box-in-a-piano-1" target="_blank">Music Box Animation and Render</a>
+				</h1>
+				<br/>
+				<div class="projectdisplay">
+					<iframe src="https://www.youtube.com/embed/-2dWcMpG0eE" frameborder="0" allowfullscreen></iframe>
+					<img src="https://d2t1xqejof9utc.cloudfront.net/screenshots/pics/95e15253cfd4ad57acf76901057a8dad/large.JPG" />
+					<img src="https://d2t1xqejof9utc.cloudfront.net/screenshots/pics/952f4e56f32c58386a18349fd50b0548/large.JPG" />
+				</div>
+				<br/>
+				<h3></h3>
 			</div>
-			<br/>
-			<h3></h3>
-		</div>
-		<div class="projectPoster">
-			<h1><a href="https://github.com/belalmksaid/PacBotCode" target="_blank">PacBot</a>  <a href="https://github.com/belalmksaid/PacBotCode" target="_blank"><img class="srcicon" src="images/github.png"/></a></h1>
-			<br/>
-			<div class="projectdisplay">
-				<img src="http://i.imgur.com/Gq17MO5.gif"></img>
-				<img src="http://i.imgur.com/aqs3Tid.jpg?1"></img>
-				<img src="http://i.imgur.com/3QY6oek.jpg?1"></img>
+			<div class="projectPoster">
+				<h1>
+					<a href="https://github.com/belalmksaid/PacBotCode" target="_blank">PacBot</a>
+					<a href="https://github.com/belalmksaid/PacBotCode" target="_blank">
+						<img class="srcicon" src="images/github.png" />
+					</a>
+				</h1>
+				<br/>
+				<div class="projectdisplay">
+					<img src="http://i.imgur.com/Gq17MO5.gif"></img>
+					<img src="http://i.imgur.com/aqs3Tid.jpg?1"></img>
+					<img src="http://i.imgur.com/3QY6oek.jpg?1"></img>
+				</div>
+				<br/>
+				<h3>
+					A maze solving robot for Harvard PacBot Competition 2017. Suprisingly, we won first place. Unlike normal mazes, pacman maze
+					has no "solution", it's a little more involved since we had to account for open loops. I also decided to implement the
+					code on a teenysduino 3.2 instead of a
+					<a href="https://www.raspberrypi.org/products/pi-zero/">Raspberry Pi Zero</a> which is at least 100 times more powerful.
+				</h3>
 			</div>
-			<br/>
-			<h3>
-				A maze solving robot for Harvard PacBot Competition 2017. Suprisingly, we won first place. Unlike normal mazes, pacman maze has no "solution", it's a little more involved since we had to account for open loops. I also decided to implement the code on a teenysduino 3.2 instead of a <a href="https://www.raspberrypi.org/products/pi-zero/">Raspberry Pi Zero</a> which is at least 100 times more powerful.
-			</h3>
-		</div>
-		<div class="projectPoster">
-			<h1><a href="projects/PacmanAI/labratory.html?n=32&t=20" target="_blank">Pacman AI Labratory</a>  <a href="https://github.com/belalmksaid/PacmanAILab" target="_blank"><img class="srcicon" src="images/github.png"/></a></h1>
-			<br/>
-			<div class="projectdisplay">
-				<img src="http://i.imgur.com/MAroA7i.jpg"></img>
-				<img src="http://i.imgur.com/SQzt3vr.jpg"></img>
-				<img src="http://i.imgur.com/oDA66FY.jpg"></img>
+			<div class="projectPoster">
+				<h1>
+					<a href="projects/PacmanAI/labratory.html?n=32&t=20" target="_blank">Pacman AI Labratory</a>
+					<a href="https://github.com/belalmksaid/PacmanAILab" target="_blank">
+						<img class="srcicon" src="images/github.png" />
+					</a>
+				</h1>
+				<br/>
+				<div class="projectdisplay">
+					<img src="http://i.imgur.com/MAroA7i.jpg"></img>
+					<img src="http://i.imgur.com/SQzt3vr.jpg"></img>
+					<img src="http://i.imgur.com/oDA66FY.jpg"></img>
+				</div>
+				<br/>
+				<h3>Watch as an AI learns how to play Pacman. It takes over 30 generations before any interesting behavior arises.
+				</h3>
 			</div>
-			<br/>
-			<h3>Watch as an AI learns how to play Pacman. It takes over 30 generations before any interesting behavior arises.
-			</h3>
 		</div>
 	</div>
-</div>
 </body>
+
 </html>
