--- a/blog.html
+++ b/blog.html
@@ -5,6 +5,7 @@
         <script src="jquery.js"></script>
         <script src="disquemath.js"></script>
         <script src="core.js"></script>
+        <script src="blog.js"></script>
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
                 (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
