--- a/blog.html
+++ b/blog.html
@@ -33,5 +33,8 @@
         <div id="posters">
         </div>
     </div>
+    <script>
+        loadBlogs(posters);
+    </script>
     </body>
     </html>
