--- a/blog.html
+++ b/blog.html
@@ -36,8 +36,10 @@
     <script>
         let id = getParam("id");
         if(id != null && id != '') {
+            console.log("not null");
         }
         else {
+            console.log("null");
             loadBlogs(posters);
         }
     </script>
