--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,7 @@
     <script>
         let id = getParam("id");
         if(id != null) {
-            console.log("null");
+            loadBlogsFromId(realbody, id)
         }
         else {
             loadBlogs(posters);
