--- a/blog.html
+++ b/blog.html
@@ -31,6 +31,7 @@
     </div>
     <div id="realbody">
         <div id="posters">
+            <div class="loader" style="margin-left: auto; margin-right: auto"></div>
         </div>
     </div>
     <script>
