--- a/projects.html
+++ b/projects.html
@@ -8,10 +8,10 @@
 	<script src="core.js"></script>
 	<script>
 		(function (i, s, o, g, r, a, m) {
-		i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-			(i[r].q = i[r].q || []).push(arguments)		
-}, i[r].l = 1 * new Date(); a = s.createElement(o),
-			m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+			i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date(); a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
 		})(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
 		ga('create', 'UA-98293275-1', 'auto');
@@ -97,6 +97,20 @@
 				</div>
 				<br/>
 				<h3>Watch as an AI learns how to play Pacman. It takes over 30 generations before any interesting behavior arises.
+				</h3>
+			</div>
+			<div class="projectPoster">
+				<h1>
+					<a href="/blog.html?id=0">Scrap Music Box</a>
+				</h1>
+				<br/>
+				<div class="projectdisplay">
+					<img src="https://i.imgur.com/AkXpKI4.png"></img>
+					<img src="https://i.imgur.com/bCw3YEi.png"></img>
+					<img src="https://i.imgur.com/z83XDYZ.png"></img>
+				</div>
+				<br/>
+				<h3>I built a music box from scrap wood and rubberbands, inspired by the inventor <a href="https://www.google.com/patents/US4458573">Akihiko Isaka's governor</a>. The rubber bands are attached to a governor that controls that speed of the music box using air resistance. The cylinder was built by cutting mahogany using a circular saw and gluing them to form a 3" long cylinder. The notes are built from a rake's teeth that I cut off and filed down to their specific notes.
 				</h3>
 			</div>
 		</div>
