--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 				<td style="width: 30%">
 					<ul style="text-align: left;">
 						<li>
-							<a href="index.html">Home</a>
+							<a href="/">Home</a>
 						</li>
 						<br/>
 						<li>
-							<a href="projects.html">Projects</a>
+							<a href="projects">Projects</a>
 						</li>
 					</ul>
 				</td>
@@ -48,7 +48,7 @@
 				<td style="width: 30%">
 					<ul style="text-align: right;">
 						<li>
-							<a href="blog.html">Blog</a>
+							<a href="blog">Blog</a>
 						</li>
 
 						<br/>
