update project linking

--- a/projects.html
+++ b/projects.html
@@ -25,9 +25,9 @@
 <body>
 	<canvas id="background"></canvas>
 	<div id="navbar">
-		<a href="index.html">Home</a> /
-		<a href="blog.html">Blog</a> /
-		<a href="projects.html">Projects</a> /
+		<a href="/">Home</a> /
+		<a href="blog">Blog</a> /
+		<a href="projects">Projects</a> /
 		<a href="BelalSaidResumeCS.pdf" target="_blank">R&#233;sum&#233;</a>
 		</ul>
 	</div>
