--- a/econ/index.html
+++ b/econ/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="jquery.js"></script>
+        <script src="../jquery.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/dygraph/2.1.0/dygraph.min.js"></script>
         <link rel="stylesheet" src="htpp://cdnjs.cloudflare.com/ajax/libs/dygraph/2.1.0/dygraph.min.css" />
         <style>
