add bottom margun

--- a/projects/tx/tix.html
+++ b/projects/tx/tix.html
@@ -50,7 +50,7 @@
         }
         #ticketinfo {
             float: none;
-            height: 700px;
+            height: 800px;
         }
         #ticketinfo > div {
             float: left;
@@ -71,6 +71,7 @@
         }
         #bottombar {
             padding-left: 30px;
+            margin-bottom: 400px;
         }
         #back {
             font-size: 38px;
