--- a/projects/tx/tix.html
+++ b/projects/tx/tix.html
@@ -140,7 +140,7 @@
             <div id="bottombar">
                 <div id="back">Back</div>
                 <p id="timeleft">Expires in : 00:02:24:<span id="sec">59</span></p>
-            </dic>
+            </div>
         </div>
         <script>
             new QRCode(document.getElementById("qrcode"), {
