--- a/projects/tx/tix.html
+++ b/projects/tx/tix.html
@@ -26,7 +26,7 @@
             margin: 0px;
         }
         #destination {
-            background: linear-gradient(pink, white, pink);
+            background: linear-gradient(blue, white, blue);
             border-radius: 25px;
 
             padding: 1px 30px 120px 30px;
