--- a/projects/tx/tix.html
+++ b/projects/tx/tix.html
@@ -26,10 +26,10 @@
             margin: 0px;
         }
         #destination {
-            background: linear-gradient(blue, white, blue);
+            background: linear-gradient(#3285FF, white,#3285FF );
             border-radius: 25px;
 
-            padding: 1px 30px 120px 30px;
+            padding: 1px 30px 150px 30px;
         }
         #ticketCount {
             border-radius: 12px;
