--- a/projects/tx/tix.html
+++ b/projects/tx/tix.html
@@ -115,10 +115,10 @@
     <body>
         <div id="container">
             <div id="destination">
-                <p class="bigwrite" style="margin-bottom: 0px">NW BRUN</p>
+                <p class="bigwrite" style="margin-bottom: 0px">NYP NYP</p>
                 <p class="offwrite">SEC</p>
                 <p class="bigwrite" style="margin-top: 0px">to</p>
-                <p class="bigwrite">NYP NYP</p>
+                <p class="bigwrite">NW BRUN</p>
             </div>
             <div id="ticketinfo">
                 <div id="ticketCount">
