--- a/projects/tx/tix.html
+++ b/projects/tx/tix.html
@@ -26,7 +26,7 @@
             margin: 0px;
         }
         #destination {
-            background: linear-gradient(#3285FF, white,#3285FF );
+            background: linear-gradient(#fe3a3b, white,#fe3a3b );
             border-radius: 25px;
 
             padding: 1px 30px 215px 30px;
@@ -115,10 +115,10 @@
     <body>
         <div id="container">
             <div id="destination">
-                <p class="bigwrite" style="margin-bottom: 0px">NYP NYP</p>
+                <p class="bigwrite" style="margin-bottom: 0px">NW BRUN</p>
                 <p class="offwrite">SEC</p>
                 <p class="bigwrite" style="margin-top: 0px">to</p>
-                <p class="bigwrite">NW BRUN</p>
+                <p class="bigwrite">NYP NYP</p>
             </div>
             <div id="ticketinfo">
                 <div id="ticketCount">
