--- a/projects/tx/tix.html
+++ b/projects/tx/tix.html
@@ -26,7 +26,7 @@
             margin: 0px;
         }
         #destination {
-            background: linear-gradient(#fe3a3b, white,#fe3a3b );
+            background: linear-gradient(#3285FF, white,#3285FF );
             border-radius: 25px;
 
             padding: 1px 30px 215px 30px;
