--- a/projects/tx/tix.html
+++ b/projects/tx/tix.html
@@ -115,15 +115,15 @@
     <body>
         <div id="container">
             <div id="destination">
-                <p class="bigwrite" style="margin-bottom: 0px">NW BRUN</p>
+                <p class="bigwrite" style="margin-bottom: 0px">NYP NYP</p>
                 <p class="offwrite">SEC</p>
                 <p class="bigwrite" style="margin-top: 0px">to</p>
-                <p class="bigwrite">NYP NYP</p>
+                <p class="bigwrite">NW BRUN</p>
             </div>
             <div id="ticketinfo">
                 <div id="ticketCount">
                     <p class="countwritebig" style="font-size: 50px">One Way</p>
-                    <p class="countwritebig">2 Adult</p>
+                    <p class="countwritebig">3 Adult</p>
                 </div>
                 <div id="qrcode">
 
