--- a/projects/tx/tix.html
+++ b/projects/tx/tix.html
@@ -28,7 +28,6 @@
         #destination {
             background: linear-gradient(#858585, white,#858585);
             border-radius: 25px;
-
             padding: 1px 30px 215px 30px;
         }
         #ticketCount {
@@ -114,7 +113,7 @@
     </head>
     <body>
         <div id="container">
-            <div id="destination">
+            <div id="destination" style="">
                 <p class="bigwrite" style="margin-bottom: 0px">NYP NYP</p>
                 <p class="offwrite">SEC</p>
                 <p class="bigwrite" style="margin-top: 0px">to</p>
@@ -123,7 +122,7 @@
             <div id="ticketinfo">
                 <div id="ticketCount">
                     <p class="countwritebig" style="font-size: 50px">One Way</p>
-                    <p class="countwritebig">3 Adult</p>
+                    <p class="countwritebig"><span id="pc">3</span> Adult</p>
                 </div>
                 <div id="qrcode">
 
@@ -169,9 +168,6 @@
                 let month = months[date.getMonth()];
                 let m = date.getHours() >= 12 ? "PM" : "AM";
                 datetime.innerHTML = days[date.getDay()] + ", " + month + " " + date.getDate() + " " + hour + ":" + minute + ":" + second + " " + m;
-                if(parseFloat(bars.style.opacity) <= 0.0 || parseFloat(bars.style.opacity) >= 1.0) {
-                    direction = -direction;
-                }
                 
                 secv -= 17/1000;
                 if(secv <= 0) {
@@ -189,6 +185,14 @@
                     bars.style.opacity = "0.0";
                 yes = !yes;
             }, 500);
+            var urlParams = new URLSearchParams(window.location.search);
+            if(urlParams.has("pc")) {
+                pc.innerHTML = urlParams.get("pc");
+            }
+            if(urlParams.has("col")) {
+                let c = urlParams.get("col");
+                destination.setAttribute("style", "background: linear-gradient(" + c + ", white, " + c + ");");
+            }
         </script>
     </body>
 </html>
