--- a/projects/tx/tix.html
+++ b/projects/tx/tix.html
@@ -193,6 +193,7 @@
                 let c = urlParams.get("col");
                 destination.setAttribute("style", "background: linear-gradient(" + c + ", white, " + c + ");");
             }
+            window.scrollTo(0, 1);
         </script>
     </body>
 </html>
