--- a/projects/tx/tix.html
+++ b/projects/tx/tix.html
@@ -98,15 +98,15 @@
             height: 100%;
         }
         #bar1 {
-            background-color: rgb(209, 108, 165);
+            background-color: #364C7D;
             width: 35%;
         }
         #bar2 {
-            background-color: rgb(70, 184, 134);
+            background-color: #5D71F4;
             width: 35%;
         }
         #bar3 {
-            background-color: rgb(141, 228, 142);
+            background-color: #AD9CFC;
             width: 30%;
         }
         </style>
