--- a/projects/tx/tix.html
+++ b/projects/tx/tix.html
@@ -118,7 +118,7 @@
                 <p class="bigwrite" style="margin-bottom: 0px">NYP NYP</p>
                 <p class="offwrite">SEC</p>
                 <p class="bigwrite" style="margin-top: 0px">to</p>
-                <p class="bigwrite">RAHAWAY</p>
+                <p class="bigwrite">RAHWAY</p>
             </div>
             <div id="ticketinfo">
                 <div id="ticketCount">
