--- a/projects/tx/tix.html
+++ b/projects/tx/tix.html
@@ -24,7 +24,7 @@
             font-size: 36px;
             line-height: 1.0;
             margin: 0px;
-            opacity: 0;
+            opacity: 1;
         }
         #destination {
             background: linear-gradient(#858585, white,#858585);
@@ -118,7 +118,7 @@
                 <p class="bigwrite" style="margin-bottom: 0px">NYP NYP</p>
                 <p class="offwrite">SEC</p>
                 <p class="bigwrite" style="margin-top: 0px">to</p>
-                <p class="bigwrite">RAHWAY</p>
+                <p class="bigwrite">NW BRUN</p>
             </div>
             <div id="ticketinfo">
                 <div id="ticketCount">
